bugfixes init.py, structure

--- a/src/templates/content/map.html
+++ b/src/templates/content/map.html
@@ -9,7 +9,7 @@
 
   <!-- STYLESHEETS -->
   <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.1/mapsjs-ui.css" />
-  <link rel="stylesheet" type="text/css" href="../static/style.css" />
+  <link rel="stylesheet" type="text/css" href="../../static/style.css" />
 
   <!-- JS API -->
   <script type="text/javascript" src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
